fixed collapse spacing

--- a/frontend/src/stylesheets/delete_modal.scss
+++ b/frontend/src/stylesheets/delete_modal.scss
@@ -10,6 +10,8 @@
   border: 1px solid black;
   box-shadow: -2rem 2rem 2rem rgba(black, 0.2); 
   z-index: 2;
+  min-width: 375px;
+  min-height: 250px;
 }
 
 .delete-content-content {
