--- a/frontend/src/stylesheets/income_form.scss
+++ b/frontend/src/stylesheets/income_form.scss
@@ -11,6 +11,7 @@
   box-shadow: -2rem 2rem 2rem rgba(black, 0.2); 
   z-index: 2;
   min-width: 375px;
+  min-height: 250px;
 }
 
 .income-cancel-button {
@@ -32,7 +33,7 @@
 }
 
 .income-form{
-  width: 50%  ;
+  width: 50%;
   background-color: beige;
   padding: 3% 3%;
   display: flex;
@@ -40,6 +41,7 @@
   text-align: center;
   justify-content: space-between;
   border: solid 3px black;
+  min-width: 250px;
 }
 
 .income-input-container{
@@ -49,7 +51,12 @@
 }
 
 .income-year-input{
-  width: 80px;
+  width: 123px;
+  text-align: center;
+}
+
+.income-value-input{
+  width: 124px;
   text-align: center;
 }
 
